fixed gap in animation

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
 	font-family: "monospace";
 	text-align: center;
 	margin: 0px;
+	overflow: hidden;
 }
 
 #resume-button {
